--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "product-management",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "lowdb": "^0.16.2",
+    "ng2-toastr": "^4.0.1",
+    "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
